[package]
name = "screen-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Screen color monitor and key simulator"

[dependencies]
screenshots = "0.8.5"
enigo = "0.1.3"
image = "0.24.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
device_query = "1.1.3"
rodio = "0.17.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
